# tinymail

./: ChangeLog  Makefile.am  Makefile.in  autogen.sh  configure.ac
debian/: changelog  compat  control  control.maemo-leste  libtinymail-1.0-0-dev.install  libtinymail-1.0-0.install  libtinymail-camel-1.0-0-dev.install  libtinymail-camel-1.0-0.install  libtinymail-gio-1.0-0-dev.install  libtinymail-gio-1.0-0.install  libtinymail-maemo-1.0-0-dev.install  libtinymail-maemo-1.0-0.install  libtinymailui-1.0-0-dev.install  libtinymailui-1.0-0.install  libtinymailui-gtk-1.0-0-dev.install  libtinymailui-gtk-1.0-0.install  rules  rules.maemo-leste
libtinymail/: tny-cached-file.c  tny-folder-store-query.c  tny-merge-folder-store.c
libtinymail-camel/: tny-camel-account.c  tny-camel-bs-mime-part.c  tny-camel-bs-msg-header.c  tny-camel-bs-msg-receive-strategy.c  tny-camel-bs-msg.c  tny-camel-common.c  tny-camel-folder.c  tny-camel-full-msg-receive-strategy.c  tny-camel-header.c  tny-camel-html-to-text-stream.c  tny-camel-imap-folder.c  tny-camel-imap-store-account.c  tny-camel-mem-stream.c  tny-camel-mime-part.c  tny-camel-msg-header.c  tny-camel-msg-remove-strategy.c  tny-camel-msg.c  tny-camel-nntp-folder.c  tny-camel-nntp-store-account.c  tny-camel-partial-msg-receive-strategy.c  tny-camel-pop-folder.c  tny-camel-pop-remote-msg-remove-strategy.c  tny-camel-pop-store-account.c  tny-camel-queue.c  tny-camel-recover-connection-policy.c  tny-camel-send-queue.c  tny-camel-store-account.c  tny-camel-stream.c  tny-camel-transport-account.c  tny-session-camel.c  tny-stream-camel.c
libtinymail-camel/camel-lite/libedataserver/: Makefile.am  e-data-server-util.c  e-data-server-util.h  e-iconv.c  e-iconv.h  e-lite-data-server-util.h  e-lite-iconv.h  e-memory.c  e-msgport.c  e-sexp.c  e-time-utils.c  e-trie.c  md5-utils.c  md5-utils.h
libtinymail-gio/: .svnignore  Makefile.am  libtinymail-gio.pc.in  tny-vfs-stream.c  tny-vfs-stream.h
libtinymail-maemo/: tny-maemo-account-store.c
libtinymailui-gtk/: tny-gtk-attachment-mime-part-view.c  (+3 more)
(+370 files in other folders)
